--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1>Clase 04 - Formularios HTML</h1>
+    <h1>Clase 04 - Formularios HTML 09/febrero/2022</h1>
     <form>
         Email: <input type="text" id="email" name="email" size="50" value="usuario@dominio.com" />
         <br />
